<resources>
    <string name="app_name">SpotSaver</string>
    <string name="action_settings">Settings</string>
    <string name="listTitle">Ihre Listen</string>
    <string name="newList">Neue Liste hinzufügen</string>
    <string name="add">Hinzufügen</string>
    <string name="newListHint">Namen eingeben</string>
    <string name="deleteList">Liste löschen</string>
    <string name="deleteSpot">Ort löschen</string>
    <string name="delete">Löschen</string>
    <string name="cantUndone">Diese Aktion kann nicht rückgängig gemacht werden</string>
    <string name="toastSpot">Ort hinzugefügt</string>
    <string name="toastSpotList">Liste hinzugefügt</string>
    <string name="toastSpotListFail">Sie müssen einen Namen eingeben</string>
    <string name="toastSpotDelete">Ort gelöscht</string>
    <string name="toastSpotListDelete">Liste gelöscht</string>
    <string name="toastSpotListEdit">Liste umbenannt</string>
    <string name="addSpot">Ort hinzufügen</string>
    <string name="name">Name:</string>
    <string name="description">Beschreibung:</string>
    <string name="renameList">Liste umbenennen:</string>
    <string name="rename">Umbenennen</string>
    <string name="clickMap">Tippen Sie auf die Karte um den Ort zu markieren</string>
    <string name="updateSpot">Ort bearbeiten</string>
    <string name="save">Speichern</string>
    <string name="savedChanges">Änderungen gespeichert</string>
    <string name="errMap">Bitte wählen Sie einen Ort aus!</string>
    <string name="details">Details</string>
</resources>