<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:elevation="4dp">

    <ImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/back"
        android:layout_gravity="left"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/tTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAppearance="@android:style/TextAppearance.WindowTitle"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/trashcan"
        android:layout_gravity="right"
        android:visibility="visible"
        android:layout_marginEnd="10dp"
        />

    <ImageView
        android:id="@+id/edit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/edit"
        android:layout_gravity="right"
        android:visibility="visible"
        android:layout_marginEnd="10dp"
        />

</androidx.appcompat.widget.Toolbar>